# NanoForge

./: .gitignore  README.md  demo_transactions.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: agents.py  chat.py  execution_runs.py  health.py  jobs.py  marketplace.py  network.py  payments.py  settlement.py  yield_routes.py
backend/app/core/: config.py  container.py
backend/app/domain/: enums.py
backend/app/indexer/: execution_sync.py
backend/app/integrations/: circle_wallets.py  onchain_indexer.py
backend/app/onchain/: contracts_registry.py  healthcheck.py
backend/nanoforge_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
contracts/: foundry.toml
contracts/broadcast/DeployArcTestnet.s.sol/5042002/: run-latest.json  (+1 more)
contracts/script/: DeployArcTestnet.s.sol  DeployLocal.s.sol
contracts/src/: AgentMarket.sol  AgentNFT.sol  JobLedger.sol  JobPaymentRouter.sol  JobSettler.sol  NFGToken.sol  YieldVault.sol
contracts/src/common/: Ownable.sol  SafeERC20Like.sol  SimpleERC20.sol  SimpleERC721.sol
contracts/src/interfaces/: IJobLifecycle.sol  IJobPaymentRouter.sol  ITransferGuard.sol  IYieldVault.sol
contracts/src/mocks/: MockUSDC.sol
contracts/src/types/: NanoForgeTypes.sol
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/pages/: AgentsPage.tsx  DashboardPage.tsx  HomePage.tsx  JobsPage.tsx  MarketplacePage.tsx  TransactionsPage.tsx
frontend/src/styles/: globals.css
scripts/: demo_transactions.py  start.sh
(+1 files in other folders)
